add favorite things

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -4,7 +4,19 @@
     <title>Favorite things!</title>
   </head>
   <body>
-    Hello, world!
-    Here is a bunch of things I like!
+    <h1>My Favorite Things</h1>
+    <p>Hello, world! Here is a bunch of things I like. I pretty much like hunging around people that I love and care for. Here is a couple of best friends I have:</p>
+    <ul>
+      <li>Breezy Pumpkin</li>
+      <li>Smurfy Lizzy</li>
+      <li>Lijji Leon</li>
+      <li>Theador Georgie</li>
+    </ul>
+    <p>Here is also a couple of foods I won't say no to:</p>
+    <ol>
+      <li>Ugali all day, any day.Yeah with some good stew.</li>
+      <li>Chapati</li>
+      <li>I have run out of options. Oopsy!</li>
+    </ol>
   </body>
 </html>
